--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -43,6 +43,7 @@
       background-color: #3855ea;
       border: solid;
       border-radius: 50px;
+      border-color: #FDD853;
     }
   </style>
 </head>
