--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,10 +24,11 @@ body {
   transform: translateY(-30px);
   border-radius: 50%;
   padding: 0px;
-  padding: 10px;
-  
+  padding: 0px;
+
   .fa-plus {
-    font-size: 40px !important;
+    font-size: 60px !important;
+    color: #FDD853;
   }
 }
 
