--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -92,6 +92,7 @@ input[type="submit"] {
 
 .groups-container{
   overflow: hidden;
+  height: 122px;
 }
 
 .doc-home {
@@ -102,7 +103,7 @@ input[type="submit"] {
   font-family: "Inter", sans-serif;
   color: white;
   font-size: 35px;
-  padding-top: 80px;
+  padding-top: 10px;
   font-style: bold;
   width: 100%;
   margin-left: 1em;
