--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,14 +10,16 @@
       <%= link_to group_path(group), style: "text-decoration: none; color: inherit;", class: "group-card-caroussel" do %>
         <div class="card-group">
           <div class="card-home-doc">
-            <% if group.photo.attached? %>
-              <div style="display: flex; align-items: center;">
-                <%= image_tag url_for(group.photo), class: "image-doc", style: "margin-right: 10px;" %>
-                <div class="doc-title" style="font-weight: bold; color: white;">
-                  <%= group.title %>
-                </div>
-              </div>
-            <% end %>
+            <div class="avatar-container" style="position: relative;">
+              <% group.users.each_with_index do |user, index| %>
+                <% if user.photo.attached? %>
+                  <%= image_tag url_for(user.photo), class: "avatar" %>
+                <% end %>
+              <% end %>
+            </div>
+            <div class="doc-title" style="font-weight: bold; color: white; margin-top: 10px;">
+              <%= group.title %>
+            </div>
           </div>
         </div>
       <% end %>
@@ -25,22 +27,27 @@
   </div>
 </div>
 
-<h2 class="title">My last Documents</h2>
-<div class="doc-home">
-  <% @documents.each do |document| %>
-    <div class="mb-2">
-      <%= link_to document_path(document), style: "text-decoration: none; color: inherit; display: block;" do %>
-        <div class="card" style="width: 100%;">
-          <div class="card-body">
-            <% if document.photo.attached? %>
-              <div style="display: flex; align-items: center;">
-                <%= image_tag url_for(document.photo), class: "image-doc-home", style: "margin-right: 10px;" %>
-                <div>
-                  <div class="doc-title" style="font-weight: bold; color: white;">
-                    <%= document.title %>
-                  </div>
-                  <% if document.group %>
-                    <div class="group-title" style="margin-top: 10px; color: white;">
+
+
+<div style="font-size: 50px;">
+<p><strong>...</strong></p>
+</div>
+  <h2 class="title">My last Documents</h2>
+    <div class="doc-home">
+      <% @documents.each do |document| %>
+        <div class="mb-2">
+          <%= link_to document_path(document), style: "text-decoration: none; color: inherit; display: block;" do %>
+            <div class="card" style="width: 100%;">
+              <div class="card-body">
+                <% if document.photo.attached? %>
+                  <div style="display: flex; align-items: center;">
+                    <%= image_tag url_for(document.photo), class: "image-doc-home", style: "margin-right: 10px;" %>
+                      <div>
+                        <div class="doc-title" style="font-weight: bold; color: white;">
+                          <%= document.title %>
+                            </div>
+                          <% if document.group %>
+                        <div class="group-title" style="margin-top: 10px; color: white;">
                       <p style="color: white;"><strong>Group:</strong> <%= document.group.title %></p>
                     </div>
                   <% end %>
