--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
   <style>
-    body {
+    /* body {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -25,7 +25,7 @@
 
     h1 {
       margin-top: 30px;
-      margin-bottom: 200px;
+      margin-bottom: 20px;
       font-size: 2.5rem;
       color: white;
       background-color: #3855ea;
@@ -44,7 +44,7 @@
       border: solid;
       border-radius: 50px;
       border-color: #FDD853;
-    }
+    } */
   </style>
 </head>
 <body>
