--- a/app/assets/stylesheets/pages/_document.scss
+++ b/app/assets/stylesheets/pages/_document.scss
@@ -10,7 +10,7 @@ body {
   margin: 20px auto;
   max-width: 80%;
   padding: 20px;
-  background-color: #eee7ed;
+  background-color: #eee7ed4d;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
