--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -41,13 +41,15 @@
   </div>
 
   <div class="send-message">
-    <%= form_with(model: [@group, @message], local: true) do |form| %>
-      <div style="display: flex;">
-        <%= form.text_area :content, rows: 2, class: "form-control", placeholder: "Type your message here..." %>
-        <%= form.submit "Send", class: "btn btn-primary", style: "margin-left: 10px;" %>
-      </div>
-    <% end %>
-  </div>
+  <%= form_with(model: [@group, @message], local: true) do |form| %>
+    <div style="display: flex; align-items: center;">
+      <%= form.text_area :content, rows: 1, class: "form-control", placeholder: "Type here...", style: "height: 55px; border-radius: 20px; padding: 10px;" %>
+      <%= form.submit "Send", class: "btn btn-primary", style: "margin-left: 10px; height: 55px; border-radius: 20px; padding: 10px 20px;" %>
+    </div>
+  <% end %>
+</div>
+
+
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -75,61 +77,3 @@
     </div>
   </div>
 </div>
-
-
-
-<style>
-
-
-
-    .chat-container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      overflow-y: auto;
-      max-height: calc(50vh - 50px); /* Adjust the height as needed */
-    }
-
-
-    .message {
-      max-width: 70%;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 20px;
-      word-wrap: break-word;
-      position: relative;
-    }
-
-    .my-message {
-      background-color: #007bff;
-      color: white;
-      align-self: flex-end;
-    }
-
-    .other-message {
-      background-color: #f0f0f0;
-      color: #333;
-      align-self: flex-start;
-    }
-
-    .sender {
-      position: absolute;
-      top: -20px;
-      left: 0;
-      right: 0;
-      text-align: center;
-      font-size: 1rem;
-      color: #666;
-    }
-
-    .send-message {
-      width: 80%;
-      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-      margin-left: 45px;
-      margin-bottom: 30px;
-
-    }
-</style>
