--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 <h2 class="title">My Groups</h2>
 <div class="groups-container">
   <div class="row home-groups">
-    <% @groups.each do |group| %>
+    <% @groups.reverse_each do |group| %>
       <%= link_to group_path(group), style: "text-decoration: none; color: inherit;", class: "group-card-caroussel" do %>
         <div class="card-group">
           <div class="card-home-doc">
@@ -27,27 +27,25 @@
   </div>
 </div>
 
-
-
 <div style="font-size: 50px;">
 <p><strong>...</strong></p>
 </div>
-  <h2 class="title">My last Documents</h2>
-    <div class="doc-home">
-      <% @documents.each do |document| %>
-        <div class="mb-2">
-          <%= link_to document_path(document), style: "text-decoration: none; color: inherit; display: block;" do %>
-            <div class="card" style="width: 100%;">
-              <div class="card-body">
-                <% if document.photo.attached? %>
-                  <div style="display: flex; align-items: center;">
-                    <%= image_tag url_for(document.photo), class: "image-doc-home", style: "margin-right: 10px;" %>
-                      <div>
-                        <div class="doc-title" style="font-weight: bold; color: white;">
-                          <%= document.title %>
-                            </div>
-                          <% if document.group %>
-                        <div class="group-title" style="margin-top: 10px; color: white;">
+<h2 class="title">My last Documents</h2>
+<div class="doc-home">
+  <% @documents.reverse_each do |document| %>
+    <div class="mb-2">
+      <%= link_to document_path(document), style: "text-decoration: none; color: inherit; display: block;" do %>
+        <div class="card" style="width: 100%;">
+          <div class="card-body">
+            <% if document.photo.attached? %>
+              <div style="display: flex; align-items: center;">
+                <%= image_tag url_for(document.photo), class: "image-doc-home", style: "margin-right: 10px;" %>
+                <div>
+                  <div class="doc-title" style="font-weight: bold; color: white;">
+                    <%= document.title %>
+                  </div>
+                  <% if document.group %>
+                    <div class="group-title" style="margin-top: 10px; color: white;">
                       <p style="color: white;"><strong>Group:</strong> <%= document.group.title %></p>
                     </div>
                   <% end %>
@@ -60,6 +58,7 @@
     </div>
   <% end %>
 </div>
+
 
 <div class="modal fade" id="addGroupModal" tabindex="-1" aria-labelledby="addGroupModalLabel" aria-hidden="true">
   <div class="modal-dialog">
