--- a/app/views/assignements/new.html.erb
+++ b/app/views/assignements/new.html.erb
@@ -26,7 +26,9 @@
         <% @users.each do |user| %>
           <div class="form-check" style="margin-bottom: 10px">
             <input type="checkbox" name="assignement[user_ids][]" value="<%= user.id %>" class="form-check-input" id="user_<%= user.id %>">
-            <label for="user_<%= user.id %>" class="form-check-label"><%= user.username %></label>
+            <label for="user_<%= user.id %>" class="form-check-label d-flex align-items-center">
+              <%= user.username %>
+            </label>
           </div>
         <% end %>
       </div>
@@ -42,3 +44,4 @@
     </div>
   </form>
 </div>
+
