--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -9,12 +9,12 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  border: 2px solid white;
+  border: 2px solid #FDD853;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .avatar-large {
-  width: 56px;
+  width: 60px;
   border-radius: 50%;
 }
 .avatar-bordered {
