--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -1,9 +1,9 @@
 {
-  "background_color"; "white",
-  "description"; "Docflow is a document management system for both small/medium-sized businesses and families. It helps you to manage your documents, keep them organized, and store them securely.",
-  "display"; "fullscreen",
-  "name"; "Docflow",
-  "icons"; [
+  "background_color": "white",
+  "description": "Docflow is a document management system for both small/medium-sized businesses and families. It helps you to manage your documents, keep them organized, and store them securely.",
+  "display": "fullscreen",
+  "name": "Docflow",
+  "icons": [
     <% files = Dir.entries(Rails.root.join("app/assets/images/icons/")).select {|f| !File.directory? f} %>
     <% files.each_with_index do |file, index| %>
       <% match = file.match(/.+-(?<size>\d{2,3}x\d{2,3}).png/) %>
