--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DocFlow</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title><%= meta_title %></title>
+    <meta name="description" content="<%= meta_description %>">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= favicon_link_tag "icons/android-icon-192x192.png" %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+
+    <%= render 'shared/ios_pwa_links' %>
+
     <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">  <%= render 'shared/ios_pwa_links' %>
-    <%= render 'shared/ios_pwa_links' %>
-    <title><%= meta_title %></title>
-    <meta name="description" content="<%= meta_description %>">
 
     <!– Facebook Open Graph data –>
     <meta property=”og:title” content=”<%= meta_title %>” />
@@ -35,15 +36,22 @@
     <meta name="twitter:description" content="<%= meta_description %>">
     <meta name="twitter:creator" content="<%= DEFAULT_META['twitter_account'] %>">
     <meta name="twitter:image:src" content="<%= meta_image %>">
+
+    <%= favicon_link_tag 'logodocflow.png', rel: 'icon', type: 'image/png' %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
   <body style= "background-color:#222222">
     <div class="logo" >
-    <%= link_to image_tag('logodocflow5.png', alt: 'Landing Page Image'), home_path %>
+      <%= link_to image_tag('logodocflow5.png', alt: 'Landing Page Image'), home_path %>
     </div>
+
     <% unless controller_name == 'landing' && action_name == 'index' %>
       <%= render "shared/navbar" %>
     <% end %>
-    <%= render "shared/flashes" %>
+
     <%= yield %>
+
+    <%= render "shared/flashes" %>
   </body>
 </html>
