--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -63,7 +63,7 @@
             <%= f.association :group %>
           </div>
           <div class="mb-3">
-            <%= f.button :submit, class: 'btn btn-primary' %>
+            <%= f.button :submit, class: "btn btn-primary", style: "background-color: #536EFD; border-color: #536EFD; margin-left: -10px;" %>
           </div>
         <% end %>
       </div>
@@ -91,7 +91,7 @@
             <%= f.input :category, collection: ['Family', 'Personal', 'Professional'] %>
           </div>
           <div class="mb-3">
-            <%= f.button :submit, class: 'btn btn-primary', style: "margin-left: -10px;" %>
+            <%= f.button :submit, class: "btn btn-primary", style: "background-color: #536EFD; border-color: #536EFD; margin-left: -10px;" %>
           </div>
         <% end %>
       </div>
