--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -141,8 +141,7 @@ h1 {
   margin-top: 30px;
   margin-bottom: 20px;
   font-size: 2.5rem;
-  color: white;
-  background-color: #3855ea;
+  color: black;
   border: none;
   border-radius: 50px;
 }
