--- a/app/assets/stylesheets/components/_doccard.scss
+++ b/app/assets/stylesheets/components/_doccard.scss
@@ -31,7 +31,7 @@
 .card-group {
   justify-content: center;
   border-radius: 20px;
-  background-color: #536EFD;
+  background-color: $blue;
   height: 100%;
 }
 
