--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -30,7 +30,7 @@ body {
 }
 
 .plus-btn {
-  background-color: #536EFD;
+  background-color: $blue;
   transform: translateY(-30px);
   border-radius: 50%;
   padding: 0px;
@@ -77,7 +77,7 @@ body {
 }
 
 .navbar {
-  background-color: #536EFD;
+  background-color: $blue;
   position: fixed;
   bottom: 30px;
   width: 91%;
@@ -112,6 +112,17 @@ body {
   flex: 1;
   text-align: center;
 }
+
+.modal-dialog {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+}
+
 
 .modal-dialog-centered {
   display: flex;
