--- a/app/assets/stylesheets/pages/_assignement.scss
+++ b/app/assets/stylesheets/pages/_assignement.scss
@@ -48,7 +48,7 @@
 }
 
 .btn-primary {
-  background-color: #007bff;
+  background-color: $blue;
   color: #fff;
   border: none;
   border-radius:20px ;
