--- a/app/assets/stylesheets/pages/_document.scss
+++ b/app/assets/stylesheets/pages/_document.scss
@@ -81,7 +81,7 @@ p strong {
 
 }
 .btn.btn-primary.mt-3:first-of-type {
-  background-color: blue;
+  background-color: $blue;
 }
 
 .btn.btn-primary.mt-3:last-of-type {
