--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -150,7 +150,8 @@ h1 {
 .btn {
   display: inline-block;
   margin-top: 20px;
-  margin-left: 15rem;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px 20px;
   font-size: 2rem;
   color: #fff;
@@ -173,7 +174,7 @@ h1 {
 
 
 .chat-container .message {
-  max-width: 70%;
+  width: fit-content;
   margin-bottom: 25px;
   padding: 5px;
   border-radius: 20px;
@@ -192,12 +193,7 @@ h1 {
 }
 
 .chat-container .sender {
-  position: absolute;
-  top: -20px;
-  right: 20px; /* Align sender name to the right side */
-  text-align: center;
-  font-size: 1.2rem;
-  color: #fcfcfc;
+  display: none;
 }
 .send-message {
   width: 85%;
