--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <div class="top-bar" style="position: absolute; top: 0; right: 0;">
-  <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" style="margin-right: 20px; margin-top: 20px;" >
+  <img class="avatar-large" alt="avatar-large" src="https://ca.slack-edge.com/T02NE0241-U06TGAB5T7C-7927c68befc2-512" style="margin-right: 20px; margin-top: 20px;" >
 </div>
 
 <h2 class="title">My Groups</h2>
