--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -216,11 +216,21 @@ padding-top: 20px;
   width: 410px;
   overflow-y: auto;
   margin-left: 26px;
-  margin-bottom: 30px;
+  margin-bottom: 53px;
 }
 
 .card-body-home {
   max-height: 200px;
   padding:10px;
 
+}
+
+.form-example-members {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+.p_home {
+  margin: 0px;
 }
