--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<div style="font-size: 50px;">
+<div class = "p_home" style="font-size: 50px;">
 <p><strong>...</strong></p>
 </div>
 <h2 class="title">My last Documents</h2>
