--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -209,3 +209,17 @@ padding-top: 20px;
 .chat-container p {
   margin: 8px;
 }
+
+.doc-home{
+  max-height: 360px;
+}
+
+.container-doc-home{
+  background-color: rgba(255, 255, 255, 0);
+  max-height: 345px;
+  overflow-y: auto;
+  margin-bottom: 50px;
+  margin-left: 25px;
+  width: 400px;
+
+}
