--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,6 +31,7 @@
 <p><strong>...</strong></p>
 </div>
 <h2 class="title">My last Documents</h2>
+<div class= container-doc-home>
 <div class="doc-home">
   <% @documents.reverse_each do |document| %>
     <div class="mb-2">
@@ -58,6 +59,8 @@
     </div>
   <% end %>
 </div>
+</div>
+
 
 
 <div class="modal fade" id="addGroupModal" tabindex="-1" aria-labelledby="addGroupModalLabel" aria-hidden="true">
