--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -209,3 +209,16 @@ padding-top: 20px;
 .chat-container p {
   margin: 8px;
 }
+
+.container-doc-home{
+  max-height: 345px;
+  overflow-y: auto;
+  margin-bottom: 50px;
+  width: 400px
+}
+
+.form-example-members{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
