fix a lot of things

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,12 +1,10 @@
-
-<body>
-
-  <div class="img">
-    <%= image_tag 'folder2.png', alt: 'Landing Page Image' %>
+<div style="height: 80vh; display: flex; align-items: center;">
+  <div>
+    <div class="img">
+      <%= image_tag 'folder2.png', alt: 'Landing Page Image' %>
+    </div>
+    <a href="<%= home_path %>" class="btn">
+      <i class="fa-solid fa-arrow-right"></i>
+    </a>
   </div>
-  <a href="<%= home_path %>" class="btn">
-    <i class="fa-solid fa-arrow-right"></i>
-  </a>
-  
-</body>
-</html>
+</div>
