--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body style= "background-color:#222222">
+  <body style= "background-color:#222222" class="container">
     <div class="logo" >
       <%= link_to image_tag('logodocflow6.png', alt: 'Landing Page Image'), home_path %>
     </div>
