--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,7 @@
 body {
   font-family: Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  min-height: 100vh;
-  margin: 0;
-  background: #f0f0f0;
+  color: #333;
+  margin-top: 100px;
 }
 
 .fixed-bottom-icons {
@@ -80,13 +75,15 @@ body {
   background-color: $blue;
   position: fixed;
   bottom: 30px;
-  width: 91%;
+  width: 90vw;
   padding: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
   border-radius: 50px;
   z-index: 1000;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .navbar a,
