--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
 </div>
 
 <div class = "p_home" style="font-size: 50px;">
-<p><strong>...</strong></p>
+<p style="text-align: center;"><strong>...</strong></p>
 </div>
 <h2 class="title">My last Documents</h2>
 <div class="container-doc-home">
